2007-09-11  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:

2007-09-03  Stefan Kost  <ensonic@users.sf.net>

	* MAINTAINERS:
	  Update MAINTAINER to adhere to rules given on
	  http://live.gnome.org/MaintainersCorner#maintainers

2007-08-23  Benjamin Otte  <otte@gnome.org>

	* gtkdoc-mktmpl.in:
	  sync with gtkdoc-mkdb completely. Really fixes #419997

2007-08-21  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	* style.css:
	  Add divider and empty space at the bottom. Mostly fixes #448879.

2007-08-21  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	  Make use of rebase if possible. Fixes #465920

	* gtkdoc-rebase.in:
	  Rebase improvements and fixes.	  

2007-08-16  Stefan Kost  <ensonic@users.sf.net>

	* .cvsignore:
	* help/.cvsignore:
	* help/manual/.cvsignore:
	* help/manual/C/.cvsignore:
	  Get rid of cvsignore files.

2007-08-14  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-common.pl.in:
	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.h:
	  Don't die when encountering #if/#endif in enums. Fixes #324535.

2007-08-14  Stefan Kost  <ensonic@users.sf.net>

	patch by: Frederic Peters <fpeters@0d.be>

	* style.css:
	  Styling hr tags.

2007-08-14  Stefan Kost  <ensonic@users.sf.net>

	* help/manual/C/gtk-doc-manual.xml:
	  Document new features and bump version.

2007-08-13  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Fix the funny side-effect of last 'broken-returns' fix.

2007-08-13  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-scan.in:
	* tests/bugs/src/tester.h:
	  Really fix #460127.

2007-08-13  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Now the 'broken' returns seems to work better. Fixes #380824 more.

2007-08-13  Stefan Kost  <ensonic@users.sf.net>

	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.c (bug_379466, bug_380824):
	* tests/bugs/src/tester.h (test):
	  New test.