@@ -1,5 +1,10 @@
 2007-09-11  Stefan Kost  <ensonic@users.sf.net>
 
+	* gtkdoc-mkdb.in:
+	  Default master doc should have proper extension. Fixes #467773.
+
+2007-09-11  Stefan Kost  <ensonic@users.sf.net>
+
 	patch by: David Nečas <yeti@physics.muni.cz>
 
 	* gtk-doc.make:
